Refactor chess
Move chariot.util.Board -> chariot.chess.Board
Add Service chariot.chess.BoardProvider